--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -213,8 +213,39 @@ jobs:
           version: latest
           args: release --clean --skip-validate -f .goreleaser.windows.yaml
 
-  release-linux:
+  release-linux-arm64:
+    runs-on: [self-hosted, Linux, ARM64]
+    timeout-minutes: 20
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: "1.20"
+          cache: true
+
+      - name: Login docker
+        env:
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        run: |
+          echo "$DOCKER_PASSWORD" | docker login -u slingdata --password-stdin
+
+      - name: Run GoReleaser
+        # uses: flarco/goreleaser-action@master
+        uses: goreleaser/goreleaser-action@v3
+        with:
+          distribution: goreleaser
+          version: latest
+          args: release --clean --skip-validate -f .goreleaser.linux.arm64.yaml
+
+  release-linux-amd64:
     runs-on: ubuntu-20.04
+    needs: [ release-linux-arm64 ] # for multi-platform docker image
     # runs-on: [self-hosted, Linux]
     timeout-minutes: 20
 
@@ -242,7 +273,7 @@ jobs:
         with:
           distribution: goreleaser
           version: latest
-          args: release --clean --skip-validate -f .goreleaser.linux.yaml
+          args: release --clean --skip-validate -f .goreleaser.linux.amd64.yaml
 
       - name: Dispatch test-sling-action
         uses: peter-evans/repository-dispatch@v2
