fixing StarRocks INSERT INTO statement
Signed-off-by: alberttwong <atwong@alumni.uci.edu>

--- a/core/dbio/database/templates/starrocks.yaml
+++ b/core/dbio/database/templates/starrocks.yaml
@@ -8,7 +8,7 @@ core:
   alter_columns: alter table {table} modify {col_ddl}
   modify_column: '{column} {type}'
   upsert: |
-    INSERT {tgt_table}
+    INSERT INTO {tgt_table}
       ({insert_fields})
     SELECT {src_fields}
     FROM {src_table} src
