--- a/cmd/sling/Dockerfile.arm64
+++ b/cmd/sling/Dockerfile.arm64
@@ -1,25 +1,31 @@
 FROM --platform=linux/arm64 ubuntu:focal
 
-RUN apt update && DEBIAN_FRONTEND=noninteractive apt install -y unzip alien libaio1 postgresql-client wget curl && \
-  apt-get clean && \
+RUN apt update || true && DEBIAN_FRONTEND=noninteractive apt install -y unzip libaio1 postgresql-client wget curl gnupg && \
+  apt clean && \
   rm -rf /var/lib/apt/lists /var/cache/apt
 
 # Install Oracle Instant Client
 # from https://www.oracle.com/database/technologies/instant-client/linux-arm-aarch64-downloads.html
 RUN cd /tmp && \
-  wget https://download.oracle.com/otn_software/linux/instantclient/instantclient-basiclite-linux-arm64.rpm && \
-  wget https://download.oracle.com/otn_software/linux/instantclient/instantclient-sdk-linux-arm64.rpm && \
-  wget https://download.oracle.com/otn_software/linux/instantclient/instantclient-sqlplus-linux-arm64.rpm && \
-  wget https://download.oracle.com/otn_software/linux/instantclient/instantclient-tools-linux-arm64.rpm && \
-  alien -i oracle-instantclient19.10-*.rpm
-
+  wget https://download.oracle.com/otn_software/linux/instantclient/instantclient-basiclite-linux-arm64.zip && \
+  wget https://download.oracle.com/otn_software/linux/instantclient/instantclient-sdk-linux-arm64.zip && \
+  wget https://download.oracle.com/otn_software/linux/instantclient/instantclient-sqlplus-linux-arm64.zip && \
+  wget https://download.oracle.com/otn_software/linux/instantclient/instantclient-tools-linux-arm64.zip && \
+  unzip instantclient-basiclite-linux-arm64.zip && \
+  unzip instantclient-sdk-linux-arm64.zip && \
+  unzip instantclient-sqlplus-linux-arm64.zip && \
+  unzip instantclient-tools-linux-arm64.zip && \
+  mkdir -p /opt/oracle/ && \
+  mv instantclient_19_19 /opt/oracle/ && \
+  echo /opt/oracle/instantclient_19_19 > /etc/ld.so.conf.d/oracle-instantclient.conf
 
 RUN echo ' \
 # Oracle Client environment
-export ORACLE_HOME=/usr/lib/oracle/19.10/client64 \
-export LD_LIBRARY_PATH=$ORACLE_HOME/lib:$LD_LIBRARY_PATH \
-export PATH="$PATH:$ORACLE_HOME/bin" \
-' >> /root/.bashrc
+export ORACLE_HOME=/opt/oracle/instantclient_19_19 \
+export LD_LIBRARY_PATH=$ORACLE_HOME:$LD_LIBRARY_PATH \
+export PATH="$PATH:$ORACLE_HOME" \
+' >> /root/.bashrc && \
+  ldconfig
 
 ## Install mssql-tools
 ## from https://docs.microsoft.com/en-us/sql/linux/sql-server-linux-setup-tools?view=sql-server-ver15#ubuntu
@@ -27,14 +33,14 @@ export PATH="$PATH:$ORACLE_HOME/bin" \
 
 # RUN curl https://packages.microsoft.com/config/ubuntu/20.04/prod.list | tee /etc/apt/sources.list.d/msprod.list
 
-# RUN export ACCEPT_EULA=y && apt-get update  && apt-get install -y mssql-tools unixodbc-dev && \
-#   apt-get clean && \
+# RUN export ACCEPT_EULA=y && apt update || true && apt install -y mssql-tools unixodbc-dev && \
+#   apt clean && \
 #   rm -rf /var/lib/apt/lists /var/cache/apt
 
 # RUN echo ' \
 # export PATH="$PATH:/opt/mssql-tools/bin"' >> /root/.bashrc
 
-ENV PATH="${PATH}:/usr/local/go/bin:/root/go/bin:/opt/mssql-tools/bin:/usr/lib/oracle/19.10/client64/bin"
+ENV PATH="${PATH}:/usr/local/go/bin:/root/go/bin:/opt/mssql-tools/bin:/opt/oracle/instantclient_19_19"
 
 ENV SLING_PACKAGE="DOCKER"
 ADD sling /usr/local/bin/sling
