--- a/cmd/sling/Dockerfile.arm64
+++ b/cmd/sling/Dockerfile.arm64
@@ -1,8 +1,5 @@
 FROM --platform=linux/arm64 ubuntu:focal
 
-RUN echo 'nameserver 8.8.8.8 \
-  nameserver 8.8.4.4' > /etc/resolv.conf
-
 RUN apt update || true && DEBIAN_FRONTEND=noninteractive apt install -y unzip libaio1 postgresql-client wget curl gnupg && \
   apt clean && \
   rm -rf /var/lib/apt/lists /var/cache/apt
@@ -35,6 +32,10 @@ export PATH="$PATH:$ORACLE_HOME" \
 # RUN curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add -
 
 # RUN curl https://packages.microsoft.com/config/ubuntu/20.04/prod.list | tee /etc/apt/sources.list.d/msprod.list
+
+# DNS fails in next apt update
+# RUN echo 'nameserver 8.8.8.8 \
+#   nameserver 8.8.4.4' > /etc/resolv.conf
 
 # RUN export ACCEPT_EULA=y && apt update || true && apt install -y mssql-tools unixodbc-dev && \
 #   apt clean && \
