--- a/core/dbio/database/templates/starrocks.yaml
+++ b/core/dbio/database/templates/starrocks.yaml
@@ -1,8 +1,7 @@
 core:
   drop_table: drop table if exists {table}
   drop_view: drop table if exists {view}
-  create_table: create table if not exists {table} ({col_types}) {distribution_type} key({distribution_key}) distributed by hash({hash_key})
-  create_index: create index {index} on {table} ({cols})
+  create_table: create table if not exists {table} ({col_types}) {distribution} distributed by hash({hash_key})
   insert: insert into {table} ({fields}) values ({values})
   update: update {table} set {set_fields} where {pk_fields_equal}
   alter_columns: alter table {table} modify {col_ddl}
