--- a/core/dbio/database/templates/postgres.yaml
+++ b/core/dbio/database/templates/postgres.yaml
@@ -1,7 +1,7 @@
 core:
   drop_table: drop table if exists {table} cascade
   drop_view: drop view if exists {view}
-  create_table: create table if not exists {table} ({col_types})
+  create_table: create table if not exists {table} ({col_types}) {partition_by}
   create_unique_index: create unique index if not exists {index} on {table} ({cols})
   replace: insert into {table} ({fields}) values ({values}) on conflict ({pk_fields}) do update set {set_fields}
   replace_temp: |
