--- a/.goreleaser.linux.arm64.yaml
+++ b/.goreleaser.linux.arm64.yaml
@@ -38,10 +38,11 @@ archives:
 checksum:
   name_template: '{{ .Runtime.Goos }}.{{ .Runtime.Goarch }}.checksums.txt'
 
-dockers:
-  - dockerfile: 'cmd/sling/Dockerfile.arm64'
-    image_templates:
-    - "slingdata/sling:{{ .Tag }}-arm64"
+# Could figure out how to make arm64 work, pushing manually
+# dockers:
+#   - dockerfile: 'cmd/sling/Dockerfile.arm64'
+#     image_templates:
+#     - "slingdata/sling:{{ .Tag }}-arm64"
 
 # mc policy set public DO/ocral/slingdata.io/cli
 blobs:
