--- a/.goreleaser.linux.amd64.yaml
+++ b/.goreleaser.linux.amd64.yaml
@@ -41,18 +41,20 @@ dockers:
   - dockerfile: 'cmd/sling/Dockerfile'
     image_templates:
     - "slingdata/sling:{{ .Tag }}-amd64"
+    - "slingdata/sling:latest-amd64"
+    - "slingdata/sling:latest"
 
 # https://goreleaser.com/cookbooks/multi-platform-docker-images/#creating-multi-platform-docker-images-with-goreleaser
-docker_manifests:
-- name_template: 'slingdata/sling:latest'
-  image_templates:
-  - 'slingdata/sling:{{ .Tag }}-amd64'
-  - 'slingdata/sling:{{ .Tag }}-arm64'
+# docker_manifests:
+# - name_template: 'slingdata/sling:latest'
+#   image_templates:
+#   - 'slingdata/sling:{{ .Tag }}-amd64'
+#   - 'slingdata/sling:{{ .Tag }}-arm64'
 
-- name_template: 'slingdata/sling:{{ .Tag }}'
-  image_templates:
-  - 'slingdata/sling:{{ .Tag }}-amd64'
-  - 'slingdata/sling:{{ .Tag }}-arm64'
+# - name_template: 'slingdata/sling:{{ .Tag }}'
+#   image_templates:
+#   - 'slingdata/sling:{{ .Tag }}-amd64'
+#   - 'slingdata/sling:{{ .Tag }}-arm64'
 
 # mc policy set public DO/ocral/slingdata.io/cli
 blobs:
