improve column type casting logic

--- a/core/dbio/database/templates/base.yaml
+++ b/core/dbio/database/templates/base.yaml
@@ -9,7 +9,10 @@ core:
   create_unique_index: create unique index {index} on {table} ({cols})
   insert: insert into {table} ({fields}) values ({values})
   update: update {table} set {set_fields} where {pk_fields_equal}
-  limit: select * from ( {sql} ) as t limit {limit}
+  limit: |
+    select * from (
+      {sql}
+    ) as t limit {limit}
   insert_from_table: insert into {tgt_table} ({tgt_fields}) select {src_fields} from {src_table}
   truncate_table: truncate table {table}
   alter_columns: alter table {table} {col_ddl}
