--- a/.goreleaser.mac.yaml
+++ b/.goreleaser.mac.yaml
@@ -23,7 +23,7 @@ builds:
       # - windows
       - darwin
     ldflags:
-      - "-X 'github.com/slingdata-io/sling-cli/core.Version={{.Version}}' -X 'github.com/slingdata-io/sling-cli/core/env.RudderstackKey={{.Env.RUDDERSTACK_KEY}}'"
+      - "-X 'github.com/slingdata-io/sling-cli/core.Version={{.Version}}' -X 'github.com/slingdata-io/sling-cli/core/env.PlausibleURL={{.Env.PLAUSIBLE_URL}}'"
 
 universal_binaries:
   - id: sling
