add old parquet for comparison

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ dist/
 demo/sling_commands_demo.workflow
 demo/sling.demo.2023.10.screenstudio
 ./sling
+core/dbio/filesys/test/dataset1M.csv
+core/dbio/filesys/test/dataset100k.csv
