--- a/core/dbio/database/templates/base.yaml
+++ b/core/dbio/database/templates/base.yaml
@@ -341,6 +341,7 @@ function:
   replace: replace({string_expr}, {to_replace}, {replacement})
   str_utf8: '{ field }'
   string_type: varchar
+  cast_as: cast({field} as {type})
   cast_to_string: cast({field} as varchar)
   fill_cnt_field: count({field}) as cnt_{field}
   fill_rate_field: round(100.0 * count({field}) / count(*), 2) as prct_{field}
