fix OptimizeTable for SQL Server

--- a/core/dbio/database/templates/sqlserver.yaml
+++ b/core/dbio/database/templates/sqlserver.yaml
@@ -21,6 +21,7 @@ core:
     where {pk_fields_equal2}
   sample: SELECT {fields} FROM {table} TABLESAMPLE SYSTEM (50) limit {n}
   rename_table: ALTER TABLE {table} RENAME TO {new_table}
+  rename_column: EXEC sp_rename '{table}.{column}', '{new_column}', 'COLUMN'
   bulk_insert: |
     BULK INSERT {table}
     FROM '/dev/stdin'
