--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -226,7 +226,7 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: "1.21"
-          cache: true
+          cache: false
 
       - name: Login docker
         env:
@@ -248,7 +248,7 @@ jobs:
           rm -f sling && cp dist/sling_linux_arm64/sling .
           export SLING_VERSION=$( ./sling --version | sed 's/Version: //')
           docker build -f cmd/sling/Dockerfile.arm64 -t slingdata/sling:$SLING_VERSION-arm64 . 
-          docker tag slingdata/sling:$SLING_VERSION-arm64 slingdata/sling-cloud:latest-arm64
+          docker tag slingdata/sling:$SLING_VERSION-arm64 slingdata/sling:latest-arm64
           docker push slingdata/sling:$SLING_VERSION-arm64
           docker push slingdata/sling:latest-arm64
 
