--- a/core/dbio/database/templates/starrocks.yaml
+++ b/core/dbio/database/templates/starrocks.yaml
@@ -1,6 +1,6 @@
 core:
   drop_table: drop table if exists {table}
-  drop_view: drop table if exists {view}
+  drop_view: drop view if exists {view}
   create_table: create table if not exists {table} ({col_types}) {distribution} distributed by hash({hash_key})
   insert: insert into {table} ({fields}) values ({values})
   update: update {table} set {set_fields} where {pk_fields_equal}
