--- a/core/dbio/database/templates/bigquery.yaml
+++ b/core/dbio/database/templates/bigquery.yaml
@@ -1,6 +1,7 @@
 core:
   drop_table: drop table if exists {table}
   drop_view: drop view if exists {view}
+  create_schema: create schema if not exists {schema}
   create_table: create table {table} ({col_types}) {partition_by} {cluster_by}
   create_index: create index {index} on {table} ({cols})
   insert: insert into {table} ({fields}) values ({values})
