--- a/core/dbio/database/templates/postgres.yaml
+++ b/core/dbio/database/templates/postgres.yaml
@@ -1,5 +1,5 @@
 core:
-  drop_table: drop table if exists {table} cascade
+  drop_table: drop table if exists {table}
   drop_view: drop view if exists {view}
   create_table: create table if not exists {table} ({col_types}) {partition_by}
   create_unique_index: create unique index if not exists {index} on {table} ({cols})
