--- a/core/dbio/database/templates/redshift.yaml
+++ b/core/dbio/database/templates/redshift.yaml
@@ -20,7 +20,7 @@ core:
   rename_table: ALTER TABLE {table} RENAME TO {new_table}
   set_schema: ALTER TABLE {table} SET SCHEMA {new_schema}
   copy_from_s3: |
-    COPY {tgt_table}
+    COPY {tgt_table} ({tgt_columns})
     FROM '{s3_path}'
     credentials 'aws_access_key_id={aws_access_key_id};aws_secret_access_key={aws_secret_access_key}'
     CSV delimiter ',' EMPTYASNULL BLANKSASNULL GZIP IGNOREHEADER 1 DATEFORMAT 'auto' TIMEFORMAT 'auto'
@@ -31,6 +31,7 @@ core:
     HEADER gzip allowoverwrite CSV PARALLEL {parallel}
   alter_columns: |
     alter table {table} {col_ddl}
+  stl_load_errors_check: select colname, line_number, err_reason  from stl_load_errors order by starttime desc limit 1
  
 metadata:
 
@@ -544,6 +545,6 @@ function:
   number_to_int: round({field}, 0)
   checksum_datetime: date_part('epoch', {field})::bigint
   checksum_string: length({field}::text)
-  checksum_boolean: length({field}::text)
+  checksum_boolean: length(case when {field} = true then 'true' when {field} = false then 'false' end)
   checksum_json: length(replace({field}::text, ' ', ''))
   # checksum_datetime: (date_part('epoch', {field}) * 1000000)::bigint
