add new docker tag

--- a/.goreleaser.linux.amd64.yaml
+++ b/.goreleaser.linux.amd64.yaml
@@ -40,6 +40,7 @@ checksum:
 dockers:
   - dockerfile: 'cmd/sling/Dockerfile'
     image_templates:
+    - "slingdata/sling:{{ .Tag }}"
     - "slingdata/sling:{{ .Tag }}-amd64"
     - "slingdata/sling:latest-amd64"
     - "slingdata/sling:latest"
