--- a/core/dbio/database/templates/base.yaml
+++ b/core/dbio/database/templates/base.yaml
@@ -360,7 +360,7 @@ variable:
   batch_rows: 2000
   batch_values: 2000
   date_layout_str: "'{value}'"
-  date_layout: '2006-01-02 15:04:05'
+  date_layout: '2006-01-02'
   timestamp_layout_str: "'{value}'"
   timestamp_layout: '2006-01-02 15:04:05.000'
   error_filter_table_exists: already
