improve date typing

--- a/core/dbio/database/templates/snowflake.yaml
+++ b/core/dbio/database/templates/snowflake.yaml
@@ -483,6 +483,7 @@ function:
   fill_cnt_field: count({field}) as cnt_{field}
   fill_rate_field: round(100.0 * count({field}) / count(*), 2) as prct_{field}
   sleep: call SYSTEM$WAIT({seconds})
+  checksum_date: DATE_PART('epoch_second', {field}) * 1000000
   checksum_datetime: DATE_PART('epoch_microsecond', {field})
   checksum_string: length({field}::string)
   checksum_boolean: length({field}::string)
