--- a/core/dbio/database/templates/bigquery.yaml
+++ b/core/dbio/database/templates/bigquery.yaml
@@ -390,6 +390,7 @@ function:
   cast_to_string: cast({field} as string)
   fill_cnt_field: count({field}) as cnt_{field}
   fill_rate_field: round(100.0 * count({field}) / count(*), 2) as prct_{field}
+  checksum_date: cast(unix_micros(cast({field} as timestamp)) as numeric)
   checksum_datetime: cast(unix_micros({field}) as numeric)
   checksum_boolean: 'length(cast({field} as string))'
   checksum_json: "length(replace(nullif(to_json_string({field}), 'null'), ' ', ''))"
