use ubuntu-16 for linux amd64

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -248,7 +248,8 @@ jobs:
           docker push slingdata/sling:latest-arm64
 
   release-linux-amd64:
-    runs-on: ubuntu-20.04
+    # runs-on: ubuntu-20.04
+    runs-on: [self-hosted, Linux, X64, ubuntu-16]
     needs: [ release-linux-arm64 ] # for multi-platform docker image
     # runs-on: [self-hosted, Linux]
     timeout-minutes: 20
