update oracle template

--- a/core/dbio/templates/oracle.yaml
+++ b/core/dbio/templates/oracle.yaml
@@ -73,6 +73,8 @@ core:
 
 metadata:
   current_database: select name from V$database
+  
+  databases: select name from V$database
 
   schemas: |
     select username as schema_name
