improve unload logic for MPP databases

--- a/core/dbio/templates/bigquery.yaml
+++ b/core/dbio/templates/bigquery.yaml
@@ -19,7 +19,7 @@ core:
         uri = '{gcs_path}',
         format = 'CSV',
         overwrite = true,
-        header = true,
+        header = false,
         field_delimiter = ',',
         compression = 'GZIP'
       ) AS (
