--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ demo/sling.demo.2023.10.screenstudio
 core/dbio/filesys/test/dataset1M.csv
 core/dbio/filesys/test/dataset100k.csv
 cmd/sling/tests/suite/
+cmd/sling/tests/replications/r.test.yaml
