--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -178,6 +178,7 @@ jobs:
           args: release --clean --skip=validate -f .goreleaser.mac.yaml
 
   release-scoop:
+    # runs-on: [self-hosted, Windows]
     runs-on: windows-latest
     timeout-minutes: 20
 
