--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -160,7 +160,9 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v1
+        with:
+          fetch-depth: 0
       
       - name: Set up Go
         uses: actions/setup-go@v3
@@ -182,7 +184,9 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       
       - name: Set up Go
         uses: actions/setup-go@v3
@@ -210,7 +214,9 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       
       - name: Set up Go
         uses: actions/setup-go@v3
@@ -250,7 +256,9 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       
       - name: Set up Go
         uses: actions/setup-go@v3
