remove git fetch

--- a/.github/workflows/test-version.yml
+++ b/.github/workflows/test-version.yml
@@ -29,8 +29,8 @@ jobs:
     # runs-on: macos-latest
 
     steps:
-      - name: Git Fetch
-        run: git fetch --tags --force
+      # - name: Git Fetch
+      #   run: git fetch --tags --force
           
       - name: Checkout
         uses: actions/checkout@v1
