--- a/.github/workflows/test-version.yml
+++ b/.github/workflows/test-version.yml
@@ -29,7 +29,7 @@ jobs:
     # runs-on: macos-latest
 
     steps:
-      # - name: Git Fetch
+      # - name: Git Fetch (to fix (would clobber existing tag)
       #   run: git fetch --tags --force
           
       - name: Checkout
