--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -264,7 +264,7 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: "1.21"
-          cache: true
+          cache: false
 
       - name: Login docker
         env:
