--- a/core/dbio/templates/azuresql.yaml
+++ b/core/dbio/templates/azuresql.yaml
@@ -42,26 +42,26 @@ metadata:
     
   schemas: |
     select schema_name
-    from information_schema.schemata
+    from INFORMATION_SCHEMA.SCHEMATA
     order by schema_name
     
   tables: |
     select table_name
-    from information_schema.tables
+    from INFORMATION_SCHEMA.TABLES
     where table_type = 'BASE TABLE'
       and table_schema = '{schema}'
     order by table_name
     
   views: |
     select table_name
-    from information_schema.tables
+    from INFORMATION_SCHEMA.TABLES
     where table_type = 'VIEW'
       and table_schema = '{schema}'
     order by table_name
 
   columns: |
     select column_name, data_type
-    from information_schema.columns
+    from INFORMATION_SCHEMA.COLUMNS
     where table_schema = '{schema}'
       and table_name = '{table}'
     order by ordinal_position
@@ -70,8 +70,8 @@ metadata:
     select tco.constraint_name as pk_name,
            kcu.ordinal_position as position,
            kcu.column_name as column_name
-    from information_schema.table_constraints tco
-    join information_schema.key_column_usage kcu 
+    from INFORMATION_SCHEMA.TABLE_CONSTRAINTS tco
+    join INFORMATION_SCHEMA.KEY_COLUMN_USAGE kcu 
          on kcu.constraint_name = tco.constraint_name
          and kcu.constraint_schema = tco.constraint_schema
          and kcu.constraint_name = tco.constraint_name
@@ -111,7 +111,7 @@ metadata:
           when 'VIEW' then 'true'
           else 'false'
         end as is_view
-      from information_schema.tables
+      from INFORMATION_SCHEMA.TABLES
       where table_schema = '{schema}' and table_name = '{table}'
     )
     select
@@ -120,7 +120,7 @@ metadata:
       cols.column_name as column_name,
       cols.data_type as data_type,
       cols.ordinal_position as position
-    from information_schema.columns cols
+    from INFORMATION_SCHEMA.COLUMNS cols
     join tables
       on tables.table_catalog = cols.table_catalog
       and tables.table_schema = cols.table_schema
@@ -137,7 +137,7 @@ metadata:
           when 'VIEW' then 'true'
           else 'false'
         end as is_view
-      from information_schema.tables
+      from INFORMATION_SCHEMA.TABLES
       where 1=1
         {{if .schema -}} and table_schema = '{schema}' {{- end}}
         {{if .tables -}} and table_name in ({tables}) {{- end}}
@@ -149,7 +149,7 @@ metadata:
       cols.column_name as column_name,
       cols.data_type as data_type,
       cols.ordinal_position as position
-    from information_schema.columns cols
+    from INFORMATION_SCHEMA.COLUMNS cols
     join tables
       on tables.table_catalog = cols.table_catalog
       and tables.table_schema = cols.table_schema
