improve variable propagation in replications

--- a/cmd/sling/tests/replications/r.00.yaml
+++ b/cmd/sling/tests/replications/r.00.yaml
@@ -1,9 +1,13 @@
-source: LOCAL
+source: '{source}'
 target: SQLITE
 
 defaults:
   mode: full-refresh
 
 streams:
-  file://./cmd/sling/tests/files/test1.1.csv:
+  file://./cmd/sling/{folder}/files/test1.1.csv:
     object: 'main.test'
+
+env:
+  folder: tests
+  source: LOCAL
