--- a/cmd/sling/tests/replications/r.09.yaml
+++ b/cmd/sling/tests/replications/r.09.yaml
@@ -4,6 +4,7 @@ target: sqlite
 defaults:
   mode: full-refresh
   object: 'main.pg_{stream_table}'
+  sql: "select *, 'hi' there from {stream_name}"
 
 streams:
   public.my_table*:
