--- a/core/env/default.env.yaml
+++ b/core/env/default.env.yaml
@@ -6,6 +6,5 @@ connections:
 
 
 # Global variables for specific settings, available to all connections at runtime
-# See https://docs.slingdata.io/sling-cloud/self-hosted-workers for workers in Self-Hosted mode with Sling Cloud
-# variables:
+variables:
 
