--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build-for-test:
     if: "! (contains(github.event.head_commit.message, '[skip ci]') || contains(github.event.head_commit.message, '[bump]'))"
-    runs-on: [self-hosted, linux]
+    runs-on: [self-hosted, linux, ubuntu-20]
     timeout-minutes: 15
 
     steps:
@@ -48,7 +48,7 @@ jobs:
 
     needs: [build-for-test]
 
-    runs-on: [self-hosted, linux]
+    runs-on: [self-hosted, linux, ubuntu-20]
     timeout-minutes: 20
 
     steps:
