--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,8 @@ core/dbio/filesys/test/dataset1M.csv
 core/dbio/filesys/test/dataset100k.csv
 cmd/sling/tests/suite/
 cmd/sling/tests/replications/r.test.yaml
+
+cmd/sling/*.lock.go
+cmd/sling/wails.json
+cmd/sling/build/
+cmd/sling/frontend
