--- a/.gitignore
+++ b/.gitignore
@@ -22,14 +22,17 @@ dist/
 .secrets
 .DS_Store
 demo/sling_commands_demo.workflow
-demo/sling.demo.2023.10.screenstudio
+*.screenstudio
 ./sling
 core/dbio/filesys/test/dataset1M.csv
 core/dbio/filesys/test/dataset100k.csv
 cmd/sling/tests/suite/
 cmd/sling/tests/replications/r.test.yaml
 
-cmd/sling/*.lock.go
-cmd/sling/wails.json
+*..go
+
+appicon.png
+wails.json
+
 cmd/sling/build/
 cmd/sling/frontend
